--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -13,9 +13,11 @@ debugpy==1.8.0
 decorator==5.1.1
 exceptiongroup==1.1.3
 executing==2.0.1
+filelock==3.9.0
 Flask==3.0.0
 flatbuffers==23.5.26
 fonttools==4.44.1
+fsspec==2023.4.0
 idna==3.4
 importlib-metadata==6.8.0
 importlib-resources==6.1.1
@@ -31,7 +33,9 @@ MarkupSafe==2.1.3
 matplotlib==3.8.1
 matplotlib-inline==0.1.6
 mediapipe==0.10.8
+mpmath==1.3.0
 nest-asyncio==1.5.8
+networkx==3.0
 numpy==1.26.2
 opencv-contrib-python==4.8.1.78
 opencv-python==4.8.1.78
@@ -56,6 +60,10 @@ setuptools==68.0.0
 six==1.16.0
 sounddevice==0.4.6
 stack-data==0.6.3
+sympy==1.12
+torch==2.1.1+cpu
+torchaudio==2.1.1+cpu
+torchvision==0.16.1+cpu
 tornado==6.3.3
 traitlets==5.13.0
 typing_extensions==4.8.0
