--- a/python_apps/.vscode/launch.json
+++ b/python_apps/.vscode/launch.json
@@ -5,7 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "PSRS: Flask App",
+            "name": "Wannabe Image Scraping",
+            "type": "python",
+            "request": "launch",
+            "module": "scrapy",
+            "args": [
+                "runspider",
+                "${file}",
+                "-o",
+                "./wannabe_crawler/quotes.jsonl",
+            ]
+        },
+        {
+            "name": "Flask Application",
             "type": "python",
             "request": "launch",
             "module": "flask",
