Modify VSCode 'settings.json' File
Move below two options to inside of Python language key
- `editor.formatOnSave`
- `editor.defaultFormatter`

--- a/python_apps/.vscode/settings.json
+++ b/python_apps/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-    "editor.defaultFormatter": "ms-python.autopep8",
-    "editor.formatOnSave": true,
+    "[python]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "ms-python.autopep8",
+    },
     "notebook.formatOnSave.enabled": true,
     "pylint.importStrategy": "useBundled",
-    "python.languageServer": "Pylance"
+    "python.languageServer": "Pylance",
 }
