--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,38 @@
+absl-py==2.0.0
+attrs==23.1.0
+blinker==1.7.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+contourpy==1.2.0
+cycler==0.12.1
+Flask==3.0.0
+flatbuffers==23.5.26
+fonttools==4.46.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+marqo==2.0.0
+matplotlib==3.8.2
+mediapipe==0.10.8
+numpy==1.26.2
+opencv-contrib-python==4.8.1.78
+packaging==23.2
+Pillow==10.1.0
 pip==23.3.1
+protobuf==3.20.3
+pycparser==2.21
+pydantic==1.10.13
+pyparsing==3.1.1
+python-dateutil==2.8.2
+requests==2.31.0
 setuptools==68.0.0
+six==1.16.0
+sounddevice==0.4.6
+typing_extensions==4.8.0
+urllib3==2.1.0
+Werkzeug==3.0.1
 wheel==0.41.2
