Add Scraper Debugging Config to 'launch.json'
Merging scraper module to this repo

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,15 @@
                 "--host=0.0.0.0",
             ],
             "jinja": true,
-        }
-    ]
+        },
+        {
+            "name": "Run Wannabe Image Scraping",
+            "type": "python",
+            "request": "launch",
+            "module": "scrapy",
+            "args": [
+                "crawl",
+            ],
+        },
+    ],
 }
