Add `cwd` Option within 'launch.json' for Debug
Change directory to 'wannabe_image_scraper/'

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,7 @@
             "type": "python",
             "request": "launch",
             "module": "scrapy",
+            "cwd": "${workspaceFolder}/scraper",
             "args": [
                 "crawl",
             ],
