Add `"cwd": "${workspaceFolder}/"` to launch.json
Template option for VSCode debugging config
The option is in "Run Flask Application"

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
             "type": "python",
             "request": "launch",
             "module": "flask",
+            "cwd": "${workspaceFolder}/",
             "env": {
                 "FLASK_APP": "app.py",
                 "FLASK_DEBUG": "1",
