Update `launch.json` Configuration File
"Python: ...": 3 Python Script Debugging Configs
- 'flask-apis'
- 'scraper'
- 'vector-db'

"Run Flask Application: ..."
- 'flask-apis'
- 'scraper'

"Scrapy: Scrape Wannabe Images"
- Intergrate to single Spider(`wannabe_spider`)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,35 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Python: Flask APIs",
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "cwd": "${workspaceFolder}/",
+            "cwd": "${workspaceFolder}/flask-apis",
             "console": "integratedTerminal",
         },
         {
-            "name": "Run Flask Application",
+            "name": "Python: Scarpy Scraper",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "cwd": "${workspaceFolder}/scraper",
+            "console": "integratedTerminal",
+        },
+        {
+            "name": "Python: Vector Database",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "cwd": "${workspaceFolder}/vector-db",
+            "console": "integratedTerminal",
+        },
+        {
+            "name": "Run Flask Application: Flask Server",
             "type": "python",
             "request": "launch",
             "module": "flask",
-            "cwd": "${workspaceFolder}/",
+            "cwd": "${workspaceFolder}/flask-apis",
             "env": {
                 "FLASK_APP": "app.py",
                 "FLASK_DEBUG": "1",
@@ -29,15 +45,30 @@
             "jinja": true,
         },
         {
-            "name": "Run Wannabe Image Scraping",
+            "name": "Run Flask Application: Scraper Node",
+            "type": "python",
+            "request": "launch",
+            "module": "flask",
+            "cwd": "${workspaceFolder}/scraper",
+            "env": {
+                "FLASK_APP": "app.py",
+                "FLASK_DEBUG": "1",
+            },
+            "args": [
+                "run",
+                "--host=0.0.0.0",
+            ],
+            "jinja": true,
+        },
+        {
+            "name": "Scrapy: Scrape Wannabe Images",
             "type": "python",
             "request": "launch",
             "module": "scrapy",
             "cwd": "${workspaceFolder}/scraper",
             "args": [
                 "crawl",
-                // "wannabe_men",
-                "wannabe_women",
+                "wannabe_spider",
             ],
         },
     ],
